- Removed `BCrypt` class due to no longer being required; - Removed `char[] password` field in `Customer` entity; - Changed `customer_pfp` default value in `Customer` entity to `default_pfp.png`; - Un-commented and updated various `System.out.println` debug calls in `KeycloakService` with meaningful messages; - Enhanced error logging for failed Keycloak user creation in `KeycloakService`.